# openenv-soc-triage

./: Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  grader.py
